(event) clear the bug which blocked the pagination in prices when got too much

--- a/web/css/manifestation-view.css
+++ b/web/css/manifestation-view.css
@@ -5,3 +5,7 @@ html body #more    { width: 255px; margin-left: 200px; overflow: hidden; }
 #sf_fieldset_spectators tbody .transaction { text-align: right; }
 
 #sf_fieldset_unbalanced .contact { max-width: 130px; overflow: hidden; white-space: nowrap; }
+
+#sf_admin_pager td.left {
+  display: none;
+}
